This adds a date range search option to partial sending. I'd like to add these partial sending search stuff to just search an actual list, rather than just using it here.
The date picker stuff also has to loaded only when it needs to be used.

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -39,6 +39,11 @@
 <!-- /tmpl_if --> 
 
 
+<link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.datetimepicker.css"/ >
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.datetimepicker.js"></script>
+
+
+
 <!-- Dada Mail's Admin Javascript -->
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.js"         type="text/javascript"></script>
 
