--- a/dada/templates/list_search_form_widget.tmpl
+++ b/dada/templates/list_search_form_widget.tmpl
@@ -3,7 +3,7 @@
       <input type="text"   name="query" id="search_query" class="small_input" value="<!-- tmpl_var query default="" escape="HTML" -->" />
       <input type="hidden" name="f"    value="view_list" />
       <input type="hidden" name="type" value="<!-- tmpl_var type default="list" -->" />
-      <input type="button" class="small_button search_list" value="Search <!-- tmpl_var type_title escape="HTML" -->" />
+      <input type="button" class="small_button search_list" value="Search <!-- tmpl_var type_title escape="HTML" -->" /> (<a href="#">adv</a>)
 	  <!-- tmpl_if query --> 
 		<input type="button" class="small_button clear_search" value="Clear" />
       
