date range works with Beatitude, I think... datetimepicker only loaded when needed. Don't Send, archive now uses data picker, what else?

--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -2,6 +2,8 @@
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Message" -->
 <!-- tmpl_set name="load_wysiwyg_editor" value="1" -->
+<!-- tmpl_set name="load_datetimepicker" value="1" -->
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
