--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -38,9 +38,10 @@
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.validate.js"></script>
 <!-- /tmpl_if --> 
 
-
-<link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.datetimepicker.css"/ >
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.datetimepicker.js"></script>
+<!-- tmpl_if load_datetimepicker --> 
+    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.datetimepicker.css"/ >
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.datetimepicker.js"></script>
+<!-- /tmpl_if -->
 
 
 
