--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -4,6 +4,7 @@
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Webpage" -->
 <!-- tmpl_set name="load_wysiwyg_editor" value="1" -->
+<!-- tmpl_set name="load_datetimepicker" value="1" -->
 
 
 <div id="screentitle"> 
