And now, we have an extremely rough advanced search.

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -41,6 +41,10 @@
 <!-- tmpl_if load_datetimepicker --> 
     <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.datetimepicker.css"/ >
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.datetimepicker.js"></script>
+    
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/unserialize.jquery.1.0.2.js"></script>
+    
+    
 <!-- /tmpl_if -->
 
 
